[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ado-mcp"
version = "0.1.0"
description = "Azure DevOps MCP server for work items"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "mcp>=1.27.2",
]

[project.scripts]
ado-mcp = "server:main"

[tool.setuptools]
py-modules = ["server", "ado_client"]
